(fix/v3/localizable): strings updated

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "levels" = "Levels";
 "back" = "Back";
 "jump" = "Skip";
-"chapters" = "chapters"
+"chapters" = "chapters";
 
 //MARK: EPISODE 1
 //ONBOARDING TEXTS CHAPTER
