(feature/v3/assetDesignation): now assets match their chapters

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -24,6 +24,8 @@
 "back" = "Back";
 "jump" = "Skip";
 "chapters" = "chapters";
+"lair" = "Lair";
+"garden" = "Garden";
 
 //MARK: EPISODE 1
 //ONBOARDING TEXTS CHAPTER
@@ -94,6 +96,9 @@
 "chapter2_entry_text4" = "SCOUNDRELS! We need to take care of this now, nobody messes with my little ones!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
 "chapter2_entry_text5" = "We have to put the pots in the magical soil for the plants to return to normal! Don't worry, we can use the bushes to move around better.";
+
+//ANIMATION TEXT
+"animation_text" = "This is a mobile bush, you can use it to move around. Drag it down to try!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
