--- a/witchie/witchie/Resources/es.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/es.lproj/Localizable.strings
@@ -24,6 +24,8 @@
 "back" = "atrás";
 "jump" = "saltar";
 "chapters" = "capıtulos";
+"lair" = "Cueva";
+"garden" = "Jardın";
 
 //MARK: EPISODE 1
 //ONBOARDING TEXTS CHAPTER 1
@@ -94,6 +96,9 @@
 "chapter2_entry_text4" = "¡MALDITOS! Necesitamos ocuparnos de esto ahora, ¡nadie toca a mis bebés!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
 "chapter2_entry_text5" = "¡Tenemos que poner los vasos en la tierra mágica para que las plantas vuelvan a la normalidad! No te preocupes, podemos usar los arbustos para movernos mejor.";
+
+//ANIMATION TEXT
+"animation_text" = "Este es un arbusto móvil, puedes usarlo para moverte. Arrastra hacia abajo para probarlo!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
