--- a/witchie/witchie/Resources/fr.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/fr.lproj/Localizable.strings
@@ -24,6 +24,8 @@
 "back" = "retour";
 "jump" = "sauter";
 "chapters" = "chapitres";
+"lair" = "Tanière";
+"garden" = "Jardin";
 
 //MARK: EPISODE 1
 //ONBOARDING TEXTS CHAPTER 1
@@ -94,6 +96,9 @@
 "chapter2_entry_text4" = "MAUDITS! Nous devons nous occuper de ça maintenant, personne ne touche à mes petits!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
 "chapter2_entry_text5" = "Nous devons mettre les pots dans la terre magique pour que les plantes retrouvent leur état normal ! Ne t'inquiète pas, nous pouvons utiliser les buissons pour nous déplacer plus facilement.";
+
+//ANIMATION TEXT
+"animation_text" = "Ceci est un buisson mobile, vous pouvez l'utiliser pour vous déplacer. Faites glisser vers le bas pour essayer!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
