(fix/v2/background): chapter 2 background implemented

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "back" = "Back";
 "jump" = "Skip";
 "chapters" = "chapters";
-"lair" = "Lair";
+"den" = "Den";
 "garden" = "Garden";
 
 //MARK: EPISODE 1
