--- a/witchie/witchie/Resources/es.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/es.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "back" = "atrás";
 "jump" = "saltar";
 "chapters" = "capıtulos";
-"lair" = "Cueva";
+"den" = "Cueva";
 "garden" = "Jardın";
 
 //MARK: EPISODE 1
