--- a/witchie/witchie/Resources/fr.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/fr.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "back" = "retour";
 "jump" = "sauter";
 "chapters" = "chapitres";
-"lair" = "Tanière";
+"den" = "Tanière";
 "garden" = "Jardin";
 
 //MARK: EPISODE 1
