--- a/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
@@ -22,7 +22,7 @@
 "back" = "voltar";
 "jump" = "pular";
 "chapters" = "capítulos";
-"lair" = "Covil";
+"den" = "Covil";
 "garden" = "Jardim";
 
 //MARK: EPISODE 1
