feat: Add assets for second onboarding screen

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -98,7 +98,7 @@
 "chapter2_entry_text5" = "We have to put the pots in the magical soil for the plants to return to normal! Don't worry, we can use the bushes to move around better.";
 
 //ANIMATION TEXT
-"animation_text" = "This is a mobile bush, you can use it to move around. Drag it down to try!";
+"animation_text" = "This is the chunky bush, you can use it to move around. Drag it down to try!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
