--- a/witchie/witchie/Resources/es.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/es.lproj/Localizable.strings
@@ -98,7 +98,7 @@
 "chapter2_entry_text5" = "¡Tenemos que poner los vasos en la tierra mágica para que las plantas vuelvan a la normalidad! No te preocupes, podemos usar los arbustos para movernos mejor.";
 
 //ANIMATION TEXT
-"animation_text" = "Este es un arbusto móvil, puedes usarlo para moverte. Arrastra hacia abajo para probarlo!";
+"animation_text" = "Este es un arbusto robusto, puedes usarlo para moverte. Arrastra hacia abajo para probarlo!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
