--- a/witchie/witchie/Resources/fr.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/fr.lproj/Localizable.strings
@@ -98,7 +98,7 @@
 "chapter2_entry_text5" = "Nous devons mettre les pots dans la terre magique pour que les plantes retrouvent leur état normal ! Ne t'inquiète pas, nous pouvons utiliser les buissons pour nous déplacer plus facilement.";
 
 //ANIMATION TEXT
-"animation_text" = "Ceci est un buisson mobile, vous pouvez l'utiliser pour vous déplacer. Faites glisser vers le bas pour essayer!";
+"animation_text" = "Ceci est un buisson costaud, vous pouvez l'utiliser pour vous déplacer. Faites glisser vers le bas pour essayer!";
 
 //BETWEEN LEVELS CHAPTER 2
 //Entendeu como funcionam os arbustos? Assim com você, eles não servem só para decoração.
