--- a/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 //BETWEEN EPISODES TEXTS CHAPTER 2
 "chapter2_entry_text1" = "Ufa, depois de tantas salas arrumadas, é hora de dar uma pausa. Meu ciático não aguenta mais!";
 "chapter2_entry_text2" = "Vamos para o meu jardim! O ar lá é muito fresco e você vai amar conhecer minhas plantinhas, a minha filha preferida é a Gertrudes!";
-"chapter2_entry_text3" = "Pera.. O que aconteceu aqui? Todos os meu vasos estão vazios e espalhados por aı... GERTRUDES, NÃAAAAAAO";
+"chapter2_entry_text3" = "Pera.. O que aconteceu aqui? Todos os meus vasos estão vazios e espalhados por aı... GERTRUDES, NÃAAAAAAO";
 "chapter2_entry_text4" = "MALDITOS! Precisamos cuidar disso agora, ninguém mexe com meus nenens!";
 "chapter2_entry_text5" = "Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.";
 
