adding sound effects

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 //MALDITOS! Precisamos cuidar disso agora, ninguém mexe com meus nenens!
 "chapter2_entry_text4" = "SCOUNDRELS! We need to take care of this now, nobody messes with my little ones!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
-"chapter2_entry_text5" = "We have to put the pots in the magical soil for the plants to return to normal! Don't worry, we can use the bushes to move around better.";
+"chapter2_entry_text5" = "We have to put the pots in the magical soil for the plants to return to normal! Don't worry, we can use the chunky bush to move around better.";
 
 //ANIMATION TEXT
 "animation_text" = "This is the chunky bush, you can use it to move around. Drag it down to try!";
