--- a/witchie/witchie/Resources/fr.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/fr.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 //MALDITOS! Precisamos cuidar disso agora, ninguém mexe com meus nenens!
 "chapter2_entry_text4" = "MAUDITS! Nous devons nous occuper de ça maintenant, personne ne touche à mes petits!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
-"chapter2_entry_text5" = "Nous devons mettre les pots dans la terre magique pour que les plantes retrouvent leur état normal ! Ne t'inquiète pas, nous pouvons utiliser les buissons pour nous déplacer plus facilement.";
+"chapter2_entry_text5" = "Nous devons mettre les pots dans la terre magique pour que les plantes retrouvent leur état normal ! Ne t'inquiète pas, nous pouvons utiliser les buissons costaud pour nous déplacer plus facilement.";
 
 //ANIMATION TEXT
 "animation_text" = "Ceci est un buisson costaud, vous pouvez l'utiliser pour vous déplacer. Faites glisser vers le bas pour essayer!";
