--- a/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/pt-BR.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 "chapter2_entry_text2" = "Vamos para o meu jardim! O ar lá é muito fresco e você vai amar conhecer minhas plantinhas, a minha filha preferida é a Gertrudes!";
 "chapter2_entry_text3" = "Pera.. O que aconteceu aqui? Todos os meus vasos estão vazios e espalhados por aı... GERTRUDES, NÃAAAAAAO";
 "chapter2_entry_text4" = "MALDITOS! Precisamos cuidar disso agora, ninguém mexe com meus nenens!";
-"chapter2_entry_text5" = "Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.";
+"chapter2_entry_text5" = "Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar o arbusto robusto para nos movermos melhor.";
 
 //ANIMATION TEXT
 "animation_text" = "Esse é o arbusto robusto, você pode usá-lo para se mover. Arraste para baixo para experimentar!";
