--- a/witchie/witchie/Resources/es.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/es.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 //MALDITOS! Precisamos cuidar disso agora, ninguém mexe com meus nenens!
 "chapter2_entry_text4" = "¡MALDITOS! Necesitamos ocuparnos de esto ahora, ¡nadie toca a mis bebés!";
 //Temos que colocar os vasos na terra mágica para as plantas voltarem ao normal! Não se preocupe, podemos usar os arbustos para nos movermos melhor.
-"chapter2_entry_text5" = "¡Tenemos que poner los vasos en la tierra mágica para que las plantas vuelvan a la normalidad! No te preocupes, podemos usar los arbustos para movernos mejor.";
+"chapter2_entry_text5" = "¡Tenemos que poner los vasos en la tierra mágica para que las plantas vuelvan a la normalidad! No te preocupes, podemos usar el arbusto robusto para movernos mejor.";
 
 //ANIMATION TEXT
 "animation_text" = "Este es un arbusto robusto, puedes usarlo para moverte. Arrastra hacia abajo para probarlo!";
