--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -28,12 +28,13 @@
 "garden" = "Garden";
 
 //NOTIFICATIONS
-"title1" = "title1";
-"body1" = "body1";
-"title2" = "title2";
-"body2" = "body2";
-"title3" = "title3";
-"body3" = "body3";
+"title1" = "Gave up?";
+"body1" = "Oh, I had so much faith in you...";
+"title2" = "I've been so lonely lately...";
+"body2" = "Even my grandchildren don't call me anymore 🥺";
+"title3" = "It's been a while since I last saw you...";
+"body3" = "You're not replacing me with that candy game, are you?";
+
 
 
 //MARK: EPISODE 1
