(feature/v4/levelMaker):onboarding level and level 2 and 3 implemented

--- a/witchie/witchie/Resources/en.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/en.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "body1" = "Oh, I had so much faith in you...";
 "title2" = "I've been so lonely lately...";
 "body2" = "Even my grandchildren don't call me anymore 🥺";
-"title3" = "It's been a while since I last saw you...";
+"title3" = "Long time no see...";
 "body3" = "You're not replacing me with that candy game, are you?";
 
 
